--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+html,
+body,
+#root,
+#root > div,
+.App {
+  height: 100vh;
+}
+
 body {
   background-color: #f9f9f9;
+
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif, "Sacramento", cursive;
